--- a/auto-proxy-module/src/main/resources/templates/wpad.tmpl
+++ b/auto-proxy-module/src/main/resources/templates/wpad.tmpl
@@ -3,7 +3,7 @@ function FindProxyForURL(url, host) {
   #if( $hostsToIntercept )
   	#foreach( $host in $hostsToIntercept )
   	  #if( $!host )
-        if (dnsDomainIs(host, "$host")) {
+        if (dnsDomainIs(host, "$host") || shExpMatch(host, "$host")) {
           return "PROXY $interceptProxy";
         }
       #end
@@ -13,7 +13,7 @@ function FindProxyForURL(url, host) {
   #if( $noProxyFor )
     #foreach( $host in $noProxyFor )
       #if( $host )
-        if (dnsDomainIs(host, "$host")) {
+        if (dnsDomainIs(host, "$host") || shExpMatch(host, "$host")) {
           return "DIRECT";
         }
       #end
